[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cit-pydata"
version = "0.0.1.dev5"
authors = [
  { name="Dionis Wang", email="dwang@eab.com" },
]
description = "Python clients for commonly used api services including Salesforce, SQL, Marketo, Box, SFSync*, and JobLog*"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
[project.urls]
Homepage = "https://github.com/EAB-IT-DEV/cit-pydata"
Issues = "https://github.com/EAB-IT-DEV/cit-pydata/issues"

[project.optional-dependencies]
aws = ["aws-lambda-powertools", "boto3"]
box = ["boxsdk"]
joblog = ["marketorestpython"]
salesforce = ["simple_salesforce","pyforce"]
sftp = ["paramiko"]
sql = ["SQLAlchemy<2.0", "numpy", "pandas"]
sql-pyodbc = ["SQLAlchemy<2.0", "pyodbc", "numpy", "pandas"]
sql-pymssql = ["SQLAlchemy<2.0", "pymssql", "numpy", "pandas"]
sql-psycopg2 = ["SQLAlchemy<2.0", "psycopg2-binary", "numpy", "pandas"]
sql-mssql = ["SQLAlchemy<2.0", "pymssql", "numpy", "pandas"]
sql-postgres = ["SQLAlchemy<2.0", "psycopg2-binary", "numpy", "pandas"]
local = ["python-dotenv"]
all = ["aws-lambda-powertools","pandas","boxsdk","marketorestpython","simple_salesforce","pyforce","paramiko","SQLAlchemy<2.0", "pyodbc","pymssql", "numpy", "pandas","psycopg2-binary","python-dotenv", "boto3"]