[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cit-pydata"
version = "0.0.2.dev8"
authors = [
  { name="Dionis Wang", email="dwang@eab.com" },{ name="Andrew Fitch", email="afitch@eab.com" },{ name="Dagim Desta", email="ddesta@eab.com" }
]
description = "Python clients for commonly used api services including Salesforce, SQL, Marketo, Box, SFSync*, and JobLog*"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
[project.urls]
Homepage = "https://github.com/EAB-IT-DEV/cit-pydata"
Issues = "https://github.com/EAB-IT-DEV/cit-pydata/issues"

[project.optional-dependencies]
aws = ["aws-lambda-powertools", "boto3"]
box = ["boxsdk"]
joblog = ["marketorestpython"]
mailer = ["requests", "boto3"]
salesforce = ["simple_salesforce","pyforce"]
sftp = ["paramiko"]
sql = ["SQLAlchemy>=1.4.36,<2.0", "numpy<2.0", "pandas<2.0"]
sql-pyodbc = ["SQLAlchemy>=1.4.36,<2.0", "pyodbc", "numpy<2.0", "pandas<2.0"]
sql-pymssql = ["SQLAlchemy>=1.4.36,<2.0", "pymssql", "numpy<2.0", "pandas<2.0"]
sql-psycopg2 = ["SQLAlchemy>=1.4.36,<2.0", "psycopg2-binary", "numpy<2.0", "pandas<2.0"]
sql-mssql = ["SQLAlchemy>=1.4.36,<2.0", "pymssql", "numpy<2.0", "pandas<2.0"]
sql-postgres = ["SQLAlchemy>=1.4.36,<2.0", "psycopg2-binary", "numpy<2.0", "pandas<2.0"]
local = ["python-dotenv"]
all = ["aws-lambda-powertools","pandas<2.0","boxsdk","marketorestpython","simple_salesforce","pyforce","paramiko","SQLAlchemy>=1.4.36,<2.0", "pyodbc","pymssql", "numpy<2.0", "pandas<2.0","psycopg2-binary","python-dotenv", "boto3", "requests"]
